Fix bug with collapsable list line alignment

--- a/src/components/collapsable_list/styles.scss
+++ b/src/components/collapsable_list/styles.scss
@@ -14,7 +14,7 @@ table.table{
         //margin: 0px;
         //line-height: 20px;
 
-        //text-align: right;
+        text-align: left;
         vertical-align: middle;
         padding: 0px 7px;
 
